# cmake-test

./: CMakeLists.txt
